@@ -14,6 +14,8 @@ Version 1.11.1+svn:
  * Miscellaneous and bug fixes:
    * The undo stack is preserved across a save-reload.
    * Removed several unused private member variables.
+   * Fixed the present in-game command line autocompletion feature so it
+     actually works at all
 
 Version 1.11.1:
  * AI:
